# clipress

./: .coverage  .gitignore  AGENTS.md  AUTODETECTION.md  CHANGELOG.md  CLIPRESS_BUILD_PLAN.md  IMPROVEMENTS.md  README.md  audit-document.md  clipress_report.html  deepseek-review.md  fix_lint.py  improvement-area.md  improvements.md  install.sh  production-document.md  project_documentation.md  pyproject.toml
.claude/: settings.json
.clipress/: .clipress-ignore  config.yaml  hook.sh  registry.db
.clipress/extensions/: example.yaml.disabled
.compressor/: registry.json
.gemini/: settings.json
clipress/: __init__.py  __main__.py  ansi.py  archive.py  classifier.py  cli.py  config.py  engine.py  learner.py  metrics.py  safety.py
clipress/defaults/: config.yaml
clipress/hooks/: __init__.py  post_tool_use.py  shell_hook.sh
clipress/registry/: seeds.json
clipress/strategies/: __init__.py  base.py  diff_strategy.py  error_strategy.py  generic_strategy.py  keyvalue_strategy.py  list_strategy.py  progress_strategy.py  table_strategy.py  test_strategy.py
docs/: architecture.md  cli-reference.md  compression.md  configuration.md  getting-started.md  integration.md  learning-system.md  security.md
tests/: conftest.py  test_classifier.py  test_cli.py  test_config.py  test_engine.py  test_golden.py  test_integration.py  test_learner.py  test_metrics.py  test_safety.py
tests/fixtures/: git_status.txt  pytest_output.txt
tests/hooks/: test_post_tool_use.py
tests/strategies/: test_diff.py  test_error.py  test_generic.py  test_keyvalue.py  test_list.py  test_progress.py  test_table.py  test_test.py
