[project]
name = "clipress"
version = "1.2.2"
description = "Universal CLI output compressor for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Mohamed Khedr", email = "0xkhdr@gmail.com" },
]
keywords = ["cli", "compression", "ai", "agents", "llm", "context-window"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "ruamel.yaml>=0.18",
]

[project.urls]
Homepage = "https://github.com/0xkhdr/clipress"
Repository = "https://github.com/0xkhdr/clipress"
"Bug Tracker" = "https://github.com/0xkhdr/clipress/issues"
Changelog = "https://github.com/0xkhdr/clipress/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "tiktoken>=0.5",
]

[project.scripts]
clipress = "clipress.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    ".compressor/",
    ".coverage",
    ".venv/",
    "uv.lock",
    ".mypy_cache/",
    ".ruff_cache/",
    ".pytest_cache/",
]

[tool.hatch.build.targets.wheel]
packages = ["clipress"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["clipress"]
omit = ["clipress/hooks/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
